[package]
name = "dns-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["macros", "net", "rt-multi-thread"] }
